# Performia

./: .current-session  .env.template  .gitignore  .goosehints  AGENTIC_WORKFLOW.md  AGENTS.md  AGENT_PROGRESS_REPORT.md  AGENT_ROADMAP.md  API.md  ARCHITECTURE.md  BRANCH_README.md  CLAUDE.md  CLAUDEFLOW_STRATEGY.md  CMakeLists.txt  CODEBASE_COMPARISON.md  CONFIG_COMPARISON.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DOCKER_README.md  GOOSE_CONFIG_FIX.md  INSTALLATION.md  LICENSE  MIGRATION_PLAN.md  MULTIMODEL_WORKFLOW.md  Makefile  PERFORMIA_MASTER_DOCS.md  PHASE2_COMPLETE.md  PRD.md  PROJECT_ARCHITECTURE.md  README.md  SPRINT_1_FINAL_REPORT.md  TECH_STACK_COMPARISON.md  UNIQUE_FILES.md  USAGE.md  clean-migration.sh  complete-clean-setup.sh  create-knob-multimodel.sh  docker-compose.dev.yml  docker-compose.yml  execute_phase1.sh  (+43 more)
.claude/: CLAUDE.md  (+11 more)
backend/: .dockerignore  .gitignore  AGENT_TASKS.md  API_IMPLEMENTATION_SUMMARY.md  CMakeLists.txt  DEMUCS_ARCHITECTURE.txt  DEMUCS_INTEGRATION_TEST_REPORT.md  DEMUCS_QUICK_START.md  DEMUCS_TEST_SUMMARY.txt  Dockerfile  MELODY_BASS_TEST_REPORT.md  PERSISTENCE_IMPLEMENTATION_REPORT.md  PIPELINE_ANALYSIS.md  QUICKSTART_API.md  README.md  RUN_API.sh  STRUCTURE_SERVICE_IMPLEMENTATION.md  STRUCTURE_VALIDATION_REPORT.md  VALIDATION_RESULTS.md  VALIDATION_RESULTS.txt  example_api_usage.py  performance_test.py  pytest.ini  quick_validate.sh  requirements.txt  songmap_3a9da0db.json  test_api.py  test_melody_bass_integration.py  test_structure.py  test_structure_accuracy.py  test_structure_accuracy_results.json  test_structure_benchmark.py  validate_song_map.py
backend/api/: openapi.yaml
backend/config/: ui_scoring_rubric.json
backend/docs/: job_persistence.md  job_persistence_architecture.md  job_persistence_quickstart.md
backend/examples/: example_song_map.json
backend/ingest-analyze-pipe/: .dockerignore  .gitignore  README.md
backend/ingest-analyze-pipe/scripts/: bootstrap_gcp.sh  generate_demo_wav.py  verify_structure.sh
backend/orchestration/kubernetes/: serviceaccounts.yaml
backend/orchestration/terraform/: cloud_run.tf  gke.tf  outputs.tf  pubsub.tf  variables.tf
backend/output/: 32193cf0.song_map.json  b72e82dc.song_map.json  integration_test.song_map.json  jobs.db  pipeline_integration_test.beats_key.json  pipeline_integration_test.separation.json  test_packager_fix.song_map.json
backend/sc/: README.md  startup.scd
backend/scripts/: QUICKSTART.md  README_UI_SYSTEM.md  SYSTEM_ARCHITECTURE.md  UI_IMPROVEMENT_SYSTEM.md  VISUAL_SYSTEM_MAP.md  benchmark_realtime.py  design_evaluation.py  local_run.sh  run_pipeline.py  screenshot_capture.py  test_api_persistence.sh  test_job_persistence.py  test_position_tracker.py  test_realtime_integration.py  test_ui_system.py  ui_improvement_orchestrator.py
backend/test_output/: complete_test.asr.json  complete_test.beats_key.json  complete_test.chords.json  complete_test.melody_bass.json  complete_test.separation.json  complete_test.song_map.json  complete_test.structure.json  integration_test.song_map.json  test_demucs_001.separation.json
backend/tests/: __init__.py  conftest.py  test_knowledge_rag_v2.py
(+479 files in other folders)
